# minvcs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: commands.rs  files.rs  main.rs
src/commands/: cat.rs  init.rs  snap.rs  store.rs
src/files/: store.rs  system.rs
