[package]
name = "minvcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65" }
clap = { version = "3.2.22", features = ["derive"] }
sha2 = { version = "0.10.6" }
flate2 = { version = "1.0.24" }
tempfile = { version = "3.3.0" }